src/components/Dashboard/CurrencyPortfolio/currencyportfolio.css
.currency--portfolio {
	background-color: #214263;
	border-radius: 3px;
	color: #fff;
	display: flex;
	flex-direction: column;
	box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.4);
	color: #fff;
	margin: 10px;
	width: 60%;
}

.currency--portfolio--header h3 {
	text-align: center;
	font-size: 1.4em;
}

.currency--portfolio--list {
	padding: 0 25px;
	list-style-type: none;
	height: 100%;
	display: flex;
	flex-direction: column;
	margin: 0;
	justify-content: center;
}

.currency--portfolio--list li {
	display: flex;
	justify-content: space-between;
	margin: 10px 0;
}

.currency--portfolio--list li img {
	width: 40px;
	height: 40px;
	border-radius: 100%;
}

.currency--portfolio--item--value {
	font-family: Montserrat, sans-serif;
	font-size: 1.2em;
	color: #8dff85;
}

.currency--total--value {
	color: #555598;
	background-color: #fff;
	padding: 26px;
	margin-bottom: 0;
	font-weight: bold;
	text-align: right;
	display: flex;
	justify-content: space-between;
	align-items: center;
	border-bottom-left-radius: 3px;
	border-bottom-right-radius: 3px;
}

.currency--total--value h3 {
	margin: 0;
}

.currency--total--value h2 {
	margin: 0;
}

